beaker/test/function-2.bkr
// Check redefinition of parameters.
def f(n : int, n : int) -> int { // error
  return 0;
}
